Shenandoah: Fix time tracking in parallel_cleaning

XMLWordPrintable

    • gc
    • b08

      Before:
      [11.987s][info][gc,stats] Mark 22986 us
      [11.987s][info][gc,stats] Finish Queues 2420 us
      [11.987s][info][gc,stats] Weak References 366 us, parallelism: 1.78x
      [11.987s][info][gc,stats] WRP: <total> 653 us
      [11.987s][info][gc,stats] WRP: Weak References 653 us, workers (us): 263, 218, 60, 112,
      [11.987s][info][gc,stats] System Purge 204 us
      [11.987s][info][gc,stats] Unload Classes 684 us
      [11.987s][info][gc,stats] Weak Roots 203 us
      [11.987s][info][gc,stats] CLDG 0 us

      After:
      [12.338s][info][gc,stats] Mark 22883 us
      [12.338s][info][gc,stats] System Purge 1174 us
      [12.338s][info][gc,stats] Weak References 475 us, parallelism: 1.90x
      [12.338s][info][gc,stats] WRP: <total> 903 us
      [12.338s][info][gc,stats] WRP: Weak References 903 us, workers (us): 116, 280, 346, 161,
      [12.338s][info][gc,stats] Unload Classes 550 us, parallelism: 0.69x
      [12.338s][info][gc,stats] CU: <total> 379 us
      [12.338s][info][gc,stats] CU: Code Cache Roots 379 us, workers (us): 76, 52, 113, 137,
      [12.338s][info][gc,stats] Weak Roots 128 us, parallelism: 1.32x
      [12.338s][info][gc,stats] WR: <total> 169 us
      [12.338s][info][gc,stats] WR: VM Weak Roots 169 us, workers (us): 73, 44, 33, 19,
      [12.338s][info][gc,stats] CLDG 0 us

            Assignee:
            Zhengyu Gu
            Reporter:
            Zhengyu Gu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: