8259404: Shenandoah: Fix time tracking in parallel_cleaning

Reviewed-by: shade